--- a/firebase-contact form/index.html
+++ b/firebase-contact form/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Patient Login Form w/Firebase</title>
+  <title>Azania Patients form</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css" />
@@ -12,10 +12,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <!-- FIREBASE LINK TO DATABASE -->
-<!-- https://patient-contact-forms.firebaseio.com/ -->
+<!-- https://azania-cloud.firebaseio.com/ -->
 <body>
   <div class="container-fluid">
-    <h1>Contact Form Linked w/ Firebase <span><i class="fas fa-database"></i></span></h1>
+    <h1>Afro Cloud Provides health assistance accross the country <span><i class="fas fa-database"></i></span></h1>
     <br>
 
 
@@ -24,10 +24,10 @@
     <h1 class="brand"><span>Patient</span> Login <span>Form </span><span><i class="fas fa-file-alt"></i></span></h1>
     <div class="wrapper">
       <div class="company-info">
-        <h3>John Doe Memorial Hospital <span><i class="far fa-hospital"></i></span></h3>
+        <h3>Kwazulu Natal Hospital <span><i class="far fa-hospital"></i></span></h3>
         <ul>
-          <li><i class="fa fa-road"></i>1600 Amphitheatre Parkway <br>Mountain View, CA 94043</li>
-          <li><i class="fa fa-phone"></i> 1-866-246-6453</li>
+          <li><i class="fa fa-road"></i>123 Botanic Gardens <br>Musgrave, Durvan 4001</li>
+          <li><i class="fa fa-phone"></i> 0712782810</li>
           <li><i class="fa fa-envelope"> ~  <a href="mailto:sample@example.com?Subject=Hello%20again" target="_top">Email Questions </a></i> </li>
         </ul>
       </div>
@@ -61,11 +61,11 @@
             <input type="text" name="phone" id="phone" required>
           </p>
           <p>
-            <label>Referring Physician</label>
+            <label>Referring Clinic</label>
             <input type="text" name="name" id="referringdr" required>
           </p>
           <p>
-            <label>Primary Physician</label>
+            <label>Primary Clinic</label>
             <input type="text" name="name" id="primarydr" required>
           </p>
           <p>
@@ -90,14 +90,13 @@
   <br><hr>
   <section class="container-fluid">
     <div class="info">
-      <h2>~ Our History In the Community ~</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae modi alias dolor accusantium nihil exercitationem provident magnam quidem, animi voluptate eaque nesciunt labore voluptatibus fuga voluptates quia atque vitae voluptatem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae hic dolor dolorem? Incidunt, rem animi dolore eius repellendus corrupti dicta impedit! Minima voluptatum odit officiis dignissimos velit illo odio error?</p>
+      <h2>~Azania Neptune Labs and NBBQ group have come together for an Afro Cloud ~</h2>
+      <p>To give you the cloud</p>
      
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, libero esse! Esse fugit ratione vero eligendi sed ducimus error odit quas, quis hic, porro quaerat tempora quam architecto labore ut?Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, nihil quis quibusdam vel repellat vero atque officiis velit, possimus quae voluptas quo enim, accusamus voluptate minima? Vero consectetur ad quam.Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, libero esse! Esse fugit ratione vero eligendi sed ducimus error odit quas, quis hic, porro quaerat tempora quam architecto labore ut?Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, nihil quis quibusdam vel repellat vero atque officiis velit, possimus quae voluptas quo enim, accusamus voluptate minima? Vero consectetur ad quam.</p>
-    </div>
+      <p>Without the crazy costs</p>
+	  </div>
   </section>
-  <footer class="text-center">John Doe, Memorial Hospital, 1600 Amphitheatre Parkway 
-      Mountain View, CA 94043. Est. 1901<span><i class="far fa-hospital"></i></span></footer>
+  <footer class="text-center">Kwazulu Natal Hospital<span><i class="far fa-hospital"></i></span></footer>
       <footer class="text-center"> &copy; 2018 MIT Lisence</footer>
   <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase.js"></script>
 
